--- a/client/src/components/Bio/Bio.css
+++ b/client/src/components/Bio/Bio.css
@@ -6,18 +6,18 @@
   border-radius: 5px;
   overflow: scroll;
   height: 650px;
-  border: 10px solid black;
+  border: 10px solid #333333;
   text-align: left
 }
 #profileImg{
   padding: 10px;
-  background-color: #0aa245;
+  background-color: #333333;
   height: auto;
   max-height: 400px;
   width: auto;
   border-radius: 5px;
   margin-top: 50%;
-  margin-left: 50px;
+  margin-left: 70px;
   transform: rotate(90deg);
 }
 #sideImg1{
@@ -26,9 +26,9 @@
   max-height: 100px;
   margin-left: 45px;
   padding: 5px;
-  background-color: #ef4123;
+  background-color: #333333;
    border-radius: 5px;
-  margin-top: 50px
+  margin-top: 80px
 }
 #sideImg2{
   width: auto;
@@ -36,9 +36,9 @@
   max-height: 100px;
   margin-left: 45px;
   padding: 5px;
-  background-color: #00addc;
+  background-color: #333333;
    border-radius: 5px;
-  margin-top: 50px
+  margin-top: 80px
 }
 #sideImg3{
   width: auto;
@@ -46,9 +46,9 @@
   max-height: 100px;
   margin-left: 45px;
   padding: 5px;
-  background-color: #fff200;
+  background-color: #333333;
   border-radius: 5px;
-  margin-top: 50px
+  margin-top: 80px
 }
 .Bio-page{
     /* background-image: url('./images/bioImage.jpg'); */
