--- a/client/src/components/Bio/Bio.css
+++ b/client/src/components/Bio/Bio.css
@@ -52,7 +52,7 @@
 }
 .Bio-page{
     /* background-image: url('./images/bioImage.jpg'); */
-    width: 1000;
+    width: 100%;
     height: 980px;
     background-size: fill;
     background-repeat: no-repeat;
